:lipstick: Minor fix on homepage on mobile

--- a/src/sass/components/_intro.scss
+++ b/src/sass/components/_intro.scss
@@ -11,6 +11,10 @@
     color: $accent;
     text-transform: uppercase;
 
+    @media #{$break-mobile-large} {
+      line-height: 1.8em;
+    }
+
     i {
       margin-right: 11px;
     }
